# final-project-level3-nlp-04

./: .gitignore  ChatGPT_api.py  README.md
app/frontend/: mainpage.py
code/: main.py  prototype_page.py
code/Sentiment_Analysis/: train.py  train.sh  utils.py
code/app/backend/: config.py  main.py
code/app/frontend/: configs.py  mainpage.py
code/backend/: config.py  main.py
code/data_processing/: ChatGPT_api.py  changer.py  data_processing_aihub.py  data_processing_korean.py  honorific_transformation.py
code/frontend/: mainpage.py  result_page.py
code/generation/: arguments.py  dataset.py  ex_batch.sh  ex_batch128.sh  ex_batch16_lr.sh  ex_batch32_lr.sh  ex_batch64_lr.sh  get_model.py  inference.py  inference.sh  predict.py  preprocessing.py  rouge_utils.py  train.py  train.sh  utils.py
code/generation/dataset/: diary_test.csv
code/generation/kobart/: arguments.py  inference.py  inference.sh  predict.py  preprocessing.py  train.py  train.sh  utils.py
code/generation/kogpt/: arguments.py  dataset.py  inference.py  train.py  utils.py
code/pseudo_labeling/: arguments.py  dataset.py  ensemble.py  inference.py  inference.sh  main.py  sentiment_labeling.py  train.py  train.sh  utils.py
code/sentiment_analysis/: arguments.py  dataset.py  inference.py  inference.sh  kote.py  predict.py  pyproject.toml  train.py  train.sh
install/: install_requirements.sh  requirements.txt
