[tool.poetry]
name = "test-fastapi"
version = "0.1.0"
description = "FasgAPI Test"
authors = ["JunHyung1206 <pjh120610@naver.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "test_fastapi"}]

[tool.poetry.dependencies]
python = ">=3.6.2,<3.10"
fastapi = "^0.70.0"

[tool.poetry.group.dev.dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
